--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.542.0",
     "mockman-js": "^1.0.5",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "react": "^17.0.2",
