--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@mui/material": "^5.8.0",
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.0",
     "bootstrap": "^5.3.8",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.10.7",
     "jsonwebtoken": "^9.0.2",
@@ -19,6 +21,7 @@
     "lucide-react": "^0.542.0",
     "mockman-js": "^1.0.5",
     "node-polyfill-webpack-plugin": "^3.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.1",
